# phisdomjs

./: .gitattributes  .gitignore  CADENCE.md  FIXES_SUMMARY.md  Makefile  PROJECT_CHARTER.md  README.md  README_E2E.md  REPORT.md  debug_trainer.py  fix_xfusion_stability.py  fusion_improved_results.json  local.mk  pyproject.toml  requirements.txt  retrain_xfusion.sh  retrain_xfusion_fixed.sh  sanity_counts.py  test_runner.py  validate_all_fixes.py  validate_pipeline.py
.tranco/: metadata.json
alphabets/: url.txt
configs/: feeds.yaml  markup_base.yaml  markup_conservative.yaml  markup_conservative_gpu.yaml
data/: .phish_only_ingested.json  dns_cache.json  rdap_cache.json  seed.csv  splits_full.json  splits_v2.json  tls_cache.json
scripts/: audit_coverage.py  audit_coverage_extended.py  audit_extended_modality_gaps.py  audit_fused_anomalies.py  audit_fused_anomaly_detail.py  audit_js_code_coverage_gaps.py  audit_js_coverage.py  audit_modality_availability.py  audit_train_augmentation.py  augment_js.py  augment_with_hard_negatives.py  auto_backfill.py  backfill_fields.py  backfill_js_missing.py  build_kpi_dashboard.py  calibrate_fusion_variants.py  calibrate_heads.py  cascade.py  cascade_band_search.py  cascade_optimize.py  cascade_optimize_v2.py  ci_check_anomalies.py  ci_gate.py  ci_gate_smoke.py  cluster_false_positives.py  cluster_false_positives_enhanced.py  compare_stacking.py  crawl_mixed_incremental.py  crawl_mixed_incremental_fixed.py  crawl_playwright.py  crawl_tranco_incremental.py  detect_head_anomalies.py  eval_fusion_variants_grid.py  eval_js_codet5p.py  (+48 more)
(+211 files in other folders)
