[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phisdom"
version = "0.1.0"
description = "Phishing DOM detection and evaluation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Authors" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
